infrastructure/kubernetes/api.yaml
# API: 3 réplicas balanceadas por el Service "api"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/frandschz/opsboard-api:sha-5f00572
          ports:
            - containerPort: 3000
          readinessProbe:           # si Redis no responde, el pod no recibe tráfico
            httpGet:
              path: /ready
              port: 3000
            periodSeconds: 5
          livenessProbe:            # si la app se cuelga, Kubernetes la reinicia
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
